fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -57,11 +57,6 @@ h1 {
   font-size: 2em;
 }
 
-img {
-  width: 100%;
-  height: auto;
-}
-
 /*
   Styling for Grids
 */
@@ -208,7 +203,7 @@ main div.default p {
 */
 main div:nth-of-type(2) {
   width: 100vw;
-  height: 35vh;
+  height: auto;
 }
 
 .image img, main div:nth-of-type(2) img, main div:nth-of-type(2) p img {
